--- a/index.html
+++ b/index.html
@@ -1,110 +1,1 @@
-<!DOCTYPE html>
-<html lang="fa">
-<head>
-  <meta charset="UTF-8">
-  <title>منوی اوستا چلوکبابی</title>
-  <style>
-    body { font-family: sans-serif; direction: rtl; background: #f8f8f8; margin: 0; padding: 0; }
-    header { background: #8B0000; color: #fff; text-align: center; padding: 1rem; }
-    .menu { display: grid; grid-template-columns: repeat(auto-fill,minmax(250px,1fr)); gap: 1rem; padding: 1rem; }
-    .item { background: #fff; border-radius: 10px; padding: 1rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); text-align: center; }
-    .item img { width: 100%; height: 150px; object-fit: cover; border-radius: 10px; }
-    .item h3 { margin: 0.5rem 0; }
-    .item button { background: #8B0000; color: #fff; border: none; padding: 0.5rem 1rem; border-radius: 5px; cursor: pointer; }
-    .cart { background: #fff; margin: 1rem; padding: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    footer { background: #333; color: #fff; text-align: center; padding: 1rem; margin-top: 1rem; }
-  </style>
-</head>
-<body>
-<header>
-  <h1>منوی اوستا چلوکبابی</h1>
-  <label>نام مشتری / شماره میز: <input id="customerName" type="text"></label>
-</header>
-
-<section class="menu" id="menu"></section>
-
-<section class="cart">
-  <h2>سبد خرید</h2>
-  <ul id="cart"></ul>
-  <p>جمع کل: <span id="total">0</span> تومان</p>
-  <button onclick="submitOrder()">ثبت سفارش</button>
-</section>
-
-<footer>
-  <p>مدیریت سلمانی - ۰۹۱۹۳۴۳۴۸۱۳۹۳</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script>
-const { createClient } = supabase;
-const SUPABASE_URL = "https://btwyxylbtwjvahciqwiq.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0d3l4eWxidHdqdmFoY2lxd2lxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc0MDQzMzQsImV4cCI6MjA3Mjk4MDMzNH0.yR3kq5iv4XYdEOYXpkKtBKhUb8hvPCs3XeykRmwLDvE";
-const db = createClient(SUPABASE_URL, SUPABASE_KEY);
-
-const menuItems = [
-  { name: "چلو کوبیده", price: 320, img: "https://source.unsplash.com/400x300/?kebab" },
-  { name: "چلو جوجه", price: 220, img: "https://source.unsplash.com/400x300/?chicken" },
-  { name: "چلو جوجه با سس مخصوص", price: 340, img: "https://source.unsplash.com/400x300/?chicken,kebab" },
-  { name: "چلو گوشت", price: 340, img: "https://source.unsplash.com/400x300/?meat,rice" },
-  { name: "چلو مرغ", price: 180, img: "https://source.unsplash.com/400x300/?chicken,rice" },
-  { name: "چلو میکس", price: 280, img: "https://source.unsplash.com/400x300/?mixed,food" },
-  { name: "چلو وزیری", price: 350, img: "https://source.unsplash.com/400x300/?kebab,food" },
-  { name: "خوراک جوجه", price: 150, img: "https://source.unsplash.com/400x300/?grilled,chicken" },
-  { name: "چلو کره", price: 70, img: "https://source.unsplash.com/400x300/?rice,butter" },
-  { name: "چلو بختیاری", price: 280, img: "https://source.unsplash.com/400x300/?iranian,kebab" },
-  { name: "چلو برگ", price: 280, img: "https://source.unsplash.com/400x300/?kebab,grill" },
-  { name: "چلو سلطانی", price: 350, img: "https://source.unsplash.com/400x300/?luxury,kebab" },
-  { name: "چلو قورمه", price: 160, img: "https://source.unsplash.com/400x300/?ghormeh" },
-  { name: "چلو قیمه", price: 160, img: "https://source.unsplash.com/400x300/?gheimeh" },
-  { name: "چلو تاوا کبابی تنوری", price: 250, img: "https://source.unsplash.com/400x300/?tandoor,kebab" },
-  { name: "خوراک کوبیده (سیخی)", price: 70, img: "https://source.unsplash.com/400x300/?kebab,skewer" },
-  { name: "گوجه سیخی", price: 5, img: "https://source.unsplash.com/400x300/?tomato" }
-];
-
-const menuDiv = document.getElementById("menu");
-menuItems.forEach((item, index) => {
-  const div = document.createElement("div");
-  div.className = "item";
-  div.innerHTML = `<img src="${item.img}"><h3>${item.name}</h3><p>${item.price} تومان</p><button onclick="addToCart(${index})">افزودن</button>`;
-  menuDiv.appendChild(div);
-});
-
-let cart = [];
-function addToCart(i) {
-  const item = menuItems[i];
-  cart.push(item);
-  renderCart();
-}
-
-function renderCart() {
-  const cartUl = document.getElementById("cart");
-  cartUl.innerHTML = "";
-  let total = 0;
-  cart.forEach((item, idx) => {
-    total += item.price;
-    const li = document.createElement("li");
-    li.textContent = item.name + " - " + item.price + " تومان";
-    cartUl.appendChild(li);
-  });
-  document.getElementById("total").textContent = total;
-}
-
-async function submitOrder() {
-  const name = document.getElementById("customerName").value;
-  if (!name || cart.length === 0) {
-    alert("نام مشتری/میز و انتخاب غذا الزامی است");
-    return;
-  }
-  const { data, error } = await db.from("orders").insert([{ customer: name, items: cart, total: cart.reduce((a,b)=>a+b.price,0) }]);
-  if (error) {
-    alert("خطا در ثبت سفارش");
-    console.error(error);
-  } else {
-    alert("سفارش ثبت شد");
-    cart = [];
-    renderCart();
-  }
-}
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang='fa'><head><meta charset='utf-8'><meta http-equiv='refresh' content='0; url=menu.html'></head><body></body></html>
