--- a/kitchen.html
+++ b/kitchen.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>سفارش‌های آشپزخانه</title>
-  <style>
-    body { font-family: sans-serif; direction: rtl; background: #f0f0f0; padding: 1rem; }
-    h1 { text-align: center; color: #8B0000; }
-    .order { background: #fff; margin: 1rem; padding: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-  </style>
-</head>
-<body>
-<h1>سفارش‌های آشپزخانه</h1>
-<div id="orders"></div>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>پنل آشپزخانه — کترینگ اوستا</title>
+<link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+body{font-family:'Vazirmatn',system-ui;background:#f7fafc;color:#072b48;margin:0;padding:18px}
+.container{max-width:980px;margin:0 auto}
+h1{text-align:center}
+.list{display:flex;flex-direction:column;gap:12px;margin-top:14px}
+.order{background:#fff;padding:12px;border-radius:10px;box-shadow:0 6px 18px rgba(10,20,40,0.06);display:flex;justify-content:space-between;align-items:flex-start}
+.items li{margin-bottom:6px}
+.btn{padding:8px 10px;border-radius:8px;border:0;cursor:pointer}
+.btn-ready{background:#10b981;color:#fff}
+.small{color:#64748b;font-size:13px}
+</style>
+<script type="module">
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+const supabaseUrl = "https://btwyxylbtwjvahciqwiq.supabase.co";
+const supabaseAnonKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0d3l4eWxidHdqdmFoY2lxd2lxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc0MDQzMzQsImV4cCI6MjA3Mjk4MDMzNH0.yR3kq5iv4XYdEOYXpkKtBKhUb8hvPCs3XeykRmwLDvE";
+const supabase = createClient(supabaseUrl, supabaseAnonKey);
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script>
-const { createClient } = supabase;
-const SUPABASE_URL = "https://btwyxylbtwjvahciqwiq.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0d3l4eWxidHdqdmFoY2lxd2lxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc0MDQzMzQsImV4cCI6MjA3Mjk4MDMzNH0.yR3kq5iv4XYdEOYXpkKtBKhUb8hvPCs3XeykRmwLDvE";
-const db = createClient(SUPABASE_URL, SUPABASE_KEY);
-
-async function loadOrders() {
-  let { data, error } = await db.from("orders").select("*").order("id", { ascending: false });
-  if (error) {
-    console.error(error);
-    return;
-  }
-  const container = document.getElementById("orders");
-  container.innerHTML = "";
-  data.forEach(order => {
-    const div = document.createElement("div");
-    div.className = "order";
-    div.innerHTML = `<h3>مشتری: ${order.customer}</h3><p>جمع کل: ${order.total} تومان</p><ul>${order.items.map(i=>"<li>"+i.name+"</li>").join("")}</ul>`;
-    container.appendChild(div);
-  });
+async function loadOrders(){
+  const { data, error } = await supabase.from('orders').select('*').order('created_at',{ascending:false});
+  if(error){ console.error(error); return; }
+  renderOrders(data||[]);
 }
 
-loadOrders();
-setInterval(loadOrders, 5000);
+function renderOrders(list){
+  const out = document.getElementById('ordersList'); out.innerHTML='';
+  if(!list.length){ out.innerHTML='<p class="small">هیچ سفارشی موجود نیست.</p>'; return; }
+  list.forEach(o=>{
+    const div = document.createElement('div'); div.className='order';
+    const left = document.createElement('div');
+    left.innerHTML = `<div><strong>میز: ${ o.table_number || '—' } ${ o.customer ? '— '+o.customer : '' }</strong></div><div class="small">زمان: ${ new Date(o.created_at||o.time||Date.now()).toLocaleString('fa-IR') }</div><ul class="items">${ (o.items||[]).map(it=>`<li>${it.name} — ${it.qty} عدد</li>`).join('') }</ul>`;
+    const right = document.createElement('div'); const btn = document.createElement('button'); btn.className='btn btn-ready'; btn.textContent='آماده شد'; btn.onclick = ()=> markReady(o.id);
+    right.appendChild(btn); div.appendChild(left); div.appendChild(right); out.appendChild(div);
+  })
+}
+
+async function markReady(id){
+  if(!confirm('آیا سفارش آماده شده؟')) return;
+  const { error } = await supabase.from('orders').update({status:'ready'}).eq('id', id);
+  if(error){ console.error(error); alert('خطا'); return; }
+  loadOrders();
+}
+
+supabase.channel('public:orders').on('postgres_changes',{event:'INSERT',schema:'public',table:'orders'},payload=>{ loadOrders(); }).subscribe();
+
+window.addEventListener('DOMContentLoaded',()=>{ loadOrders(); setInterval(loadOrders,8000); })
 </script>
+</head>
+<body>
+<div class="container">
+  <h1>پنل آشپزخانه — سفارش‌های جدید</h1>
+  <div id="ordersList" class="list"></div>
+</div>
 </body>
 </html>
