--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 <title>کترینگ اوستا — منو</title>
 <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#0f1724;--card:#0b1226;--muted:#9aa6b2;--accent:#22c55e;--accent2:#06b6d4;--text:#e6eef6}
+:root{/*bg:#0f1724;--card:#0b1226;--muted:#9aa6b2;--accent:#22c55e;--accent2:#06b6d4;--text:#e6eef6*/}
 *{box-sizing:border-box}
 html,body{margin:0;padding:0;height:100%;font-family:'Vazirmatn',system-ui;background:linear-gradient(160deg,#071029 0%, #0b1226 60%);color:var(--text)}
 .container{max-width:1100px;margin:14px auto;padding:16px}
